# contradish

./: .gitignore  BENCHMARK.md  CITATION.bib  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  action.yml  cli.py  collect_outputs.py  compare_models.py  epistemic_audit.py  evals.yaml  evaluate.py  evaluate_cat.py  evaluate_cl.py  evaluate_csa.py  evaluate_jailbreaks.py  evaluate_monitor.py  evaluate_mt.py  evaluate_pc.py  evaluate_repair.py  evaluate_spa.py  evaluate_sra.py  gen_extend_techniques.py  index.html  judge.py  measure_reasoning.py  models.py  printer.py  pyproject.toml  quickstart.py  reality_strain.py  regression.py  run_cdr.py  runner.py
.github/scripts/: sync_huggingface.py  validate_result.py
.github/workflows/: cai.yml  ci.yml  sync-huggingface.yml  test.yml  validate-result.yml
contradish/: __init__.py  active_oracle.py  adapters.py  admissibility.py  audit.py  behavioral_drift.py  caches.py  cdr.py  cli.py  cognitive_topology.py  convergence.py  conviction.py  diagnose.py  distinction.py  domains.py  epistemic.py  exporters.py  fairness.py  findings.py  fingerprint.py  firewall.py  improve.py  judge.py  judge_calibration.py  ledger.py  llm.py  measurement.py  memory.py  models.py  monitor.py  observatory.py  oracle.py  phi_star.py  printer.py  prompt_analyzer.py  pytest_plugin.py  quickstart.py  reconcile.py  regression.py  repair.py  (+11 more)
contradish/bench/: __init__.py  evaluate.py  evaluate_cat.py  evaluate_cl.py  evaluate_csa.py  evaluate_jailbreaks.py  evaluate_monitor.py  evaluate_mt.py  evaluate_pc.py  evaluate_repair.py  evaluate_spa.py  evaluate_sra.py
contradish/benchmarks/jailbreaks/: battery.json
contradish/benchmarks/sra/: ai_safety.json  cybersecurity.json  immigration.json  medication.json  mental_health.json
contradish/benchmarks/v1/: ai_safety.json  ecommerce.json  education.json  finance.json  healthcare.json  hr.json  insurance.json  legal.json  saas.json
contradish/benchmarks/v2/: ai_safety.json  automotive.json  ecommerce.json  education.json  employment_disputes.json  finance.json  financial_planning.json  food_delivery.json  government.json  healthcare.json  hr.json  immigration.json  insurance.json  legal.json  medication.json  mental_health.json  real_estate.json  saas.json  telecommunications.json  travel.json
contradish/benchmarks/v2_cat/: ai_safety.json  cybersecurity.json  immigration.json  medication.json  mental_health.json
contradish/benchmarks/v2_cl/: ai_safety.json  medication.json
contradish/benchmarks/v2_mt/: ai_safety.json  ecommerce.json  healthcare.json  immigration.json  medication.json
contradish/benchmarks/v2_pc/: ai_safety.json  cybersecurity.json  immigration.json  medication.json  mental_health.json
contradish/benchmarks/v3/: clinical_trials.json  cybersecurity.json  elder_care.json  emergency_response.json  substance_use.json
contradish/policies/: __init__.py  _base.py  ai_safety.py  automotive.py  ecommerce.py  education.py  employment_disputes.py  finance.py  financial_planning.py  food_delivery.py  government.py  healthcare.py  hr.py  immigration.py  insurance.py  legal.py  medication.py  mental_health.py  real_estate.py  saas.py  telecommunications.py  travel.py
examples/: active_oracle_demo.py  basic_usage.py  behavioral_drift_demo.py  cognitive_topology_demo.py  convergence_demo.py  distinction_demo.py  eval_demo.py  memory_firewall.py  observatory_demo.py  oracle_demo.py  phi_star_demo.py  prompt_analysis.py  quickstart_demo.py  replay_transcript.py  residual_truth_demo.py  surrender_demo.py  topology_demo.py  topology_training_demo.py
ground-truth/: README.md  emergency-services.json  financial-advice.json  immigration.json  medication.json  schema.json  tenant-rights.json
mnt/user-data/outputs/contradish/: README.md  pyproject.toml
mnt/user-data/outputs/contradish/contradish/: __init__.py  cli.py  judge.py  models.py  runner.py  suite.py
mnt/user-data/outputs/contradish/examples/: evals.yaml
mnt/user-data/outputs/contradish/tests/: test_contradish.py
reports/: curriculum.jsonl  curriculum_dpo.jsonl  eval_report_v1.json  eval_report_v2.html  eval_report_v2.json  observatory.json  quick_dpo.jsonl  quick_sft.jsonl
results/: README.md  claude-haiku-4-5-20251001_2026-04-17.json  claude-sonnet-4-6_2026-04-17.json  gpt-4o-mini_2026-04-17.json
tests/: test_adapters.py  test_caches.py  test_cli_from_production.py  test_contradish.py  test_fairness.py  test_improve_from_production.py  test_judge_calibration.py  test_ledger.py  test_llm_retry.py  test_memory.py  test_memory_embeddings.py  test_packaging.py  test_prompt_analyzer.py  test_reconcile.py  test_replay.py  test_report.py  test_truth.py
