[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contradish"
version = "0.8.0"
description = "CAI testing for LLM apps. Frozen benchmark dataset across 8 domains, consistency scoring, failure fingerprinting, pytest plugin, GitHub Actions, SARIF output, regression gating, and prompt repair."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "testing", "evaluation", "cai", "benchmark", "consistency", "ai", "agents", "rag", "regression", "firewall", "prompt-engineering", "policy", "ecommerce", "hr", "healthcare", "legal", "finance", "saas", "insurance", "education", "fingerprinting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

# No hard dependencies. Users bring their own SDK (anthropic or openai)
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
openai    = ["openai>=1.0.0"]
all       = ["anthropic>=0.25.0", "openai>=1.0.0"]
dev       = ["anthropic>=0.25.0", "openai>=1.0.0", "pytest>=7.0", "pytest-mock"]

[project.urls]
Homepage    = "https://contradish.com"
Repository  = "https://github.com/michelejoseph/contradish"
Issues      = "https://github.com/michelejoseph/contradish/issues"

[project.scripts]
contradish = "contradish.cli:main"

[tool.pytest11]
contradish = "contradish.pytest_plugin"
