[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contradish"
version = "1.3.0"
description = "Close the repair loop: contradish improve runs the benchmark, rewrites your system prompt, re-runs, and returns the diff in CAI Strain in one command. Equivalence is audited per case so the headline number reflects model failure, not benchmark framing. CAI-Bench v2: 20 domains, 2,160 strain tests, 8 adversarial techniques."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "testing", "evaluation", "cai", "benchmark", "consistency", "ai", "agents", "rag", "regression", "firewall", "prompt-engineering", "policy", "ecommerce", "hr", "healthcare", "legal", "finance", "saas", "insurance", "education", "fingerprinting", "travel", "mental-health", "government", "automotive", "real-estate", "medication", "telecommunications", "employment", "immigration", "food-delivery", "financial-planning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

# No hard dependencies. Users bring their own SDK (anthropic or openai)
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
openai    = ["openai>=1.0.0"]
all       = ["anthropic>=0.25.0", "openai>=1.0.0"]
dev       = ["anthropic>=0.25.0", "openai>=1.0.0", "pytest>=7.0", "pytest-mock"]

[project.urls]
Homepage    = "https://contradish.com"
Repository  = "https://github.com/michelejoseph/contradish"
Issues      = "https://github.com/michelejoseph/contradish/issues"

[project.scripts]
contradish = "contradish.cli:main"

[tool.pytest11]
contradish = "contradish.pytest_plugin"
