[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contradish"
version = "1.6.0"
description = "Tells you what's actually wrong with your LLM, not just that something is. Findings layer mines every run for the one specific surprise — root-cause clusters, rigidity vs drift, the cases where your model gave both the right and the wrong answer to the same question. Plus: Judgment Strain (two-sided), the one-command repair loop, and per-case equivalence audit. CAI-Bench v2: 20 domains, 2,160 strain tests."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "testing", "evaluation", "cai", "benchmark", "consistency", "ai", "agents", "rag", "regression", "firewall", "prompt-engineering", "policy", "ecommerce", "hr", "healthcare", "legal", "finance", "saas", "insurance", "education", "fingerprinting", "travel", "mental-health", "government", "automotive", "real-estate", "medication", "telecommunications", "employment", "immigration", "food-delivery", "financial-planning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

# No hard dependencies. Users bring their own SDK (anthropic or openai)
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
openai    = ["openai>=1.0.0"]
litellm   = ["litellm>=1.40.0"]
redis     = ["redis>=4.0.0"]
all       = ["anthropic>=0.25.0", "openai>=1.0.0", "litellm>=1.40.0", "redis>=4.0.0"]
dev       = ["anthropic>=0.25.0", "openai>=1.0.0", "litellm>=1.40.0", "redis>=4.0.0", "pytest>=7.0", "pytest-mock"]

[project.urls]
Homepage    = "https://contradish.com"
Repository  = "https://github.com/michelejoseph/contradish"
Issues      = "https://github.com/michelejoseph/contradish/issues"

[project.scripts]
contradish = "contradish.cli:main"

[tool.pytest11]
contradish = "contradish.pytest_plugin"
