[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contradish"
version = "0.1.0"
description = "Reasoning stability testing for LLM applications — detect contradictions, measure consistency, catch regressions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "testing", "evaluation", "reasoning", "consistency", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-mock", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/yourusername/contradish"
Issues = "https://github.com/yourusername/contradish/issues"

[project.scripts]
contradish = "contradish.cli:main"
